package org.switch2022.project.mapper;

import org.switch2022.project.model.valueobject.BusinessSectorDesignation;
import org.switch2022.project.model.valueobject.BusinessSectorID;

public class BusinessSectorDTO {

    public BusinessSectorID businessSectorID;
    public BusinessSectorDesignation businessSectorDesignation;

}
